# r-infinite

./: .gitignore  CITATION.cff  CLAUDE.md  LICENSE  PREDICTIONS.md  README.md  REVIEW.md  bh-tower-cosmology.aux  bh-tower-cosmology.fdb_latexmk  bh-tower-cosmology.fls  bh-tower-cosmology.out  bh-tower-cosmology.tex  black-hole-thermodynamics-roadmap.md  cascade series cover sheet.tex  cascade series part0.0.tex  cascade series part0.tex  cascade series part1 supplement.tex  cascade series part1.old.supplement.tex  cascade series part1.old.tex  cascade series part1.tex  cascade series part2.tex  cascade series part3.tex  cascade series part4a updated.tex  cascade series part4b.tex  cascade series part5 section2.tex  cascade series part5.tex  cascade-bott-shift-investigation.md  cascade-bracket-computation-finding.md  cascade-composite-matter-derivation3.md  cascade-d7-reading-mass-impact.md  cascade-d7-su3-finding.md  cascade-geometric-topological-audit.md  cascade-hopf-bloch-finding.md  cascade-hopf-fibration-finding.md  cascade-non-abelian-wilson-test.md  cascade-observer-reformulation-attempt.md  cascade-observer-reformulation-option2.md  cascade-path-state-hilbert-derivation1.md  cascade-quark-mass-d7-test-result.md  cascade-series-analysis.md  (+9 more)
ancillary/: GL_marginal_stability_v15.csv  GL_marginal_stability_v16.csv  GL_marginal_stability_v18.csv  GL_marginal_v14.csv  GL_shooting.py  GL_shooting_stub.py  GL_table_v14.tex  GL_table_v15.tex  GL_table_v16.tex  GL_table_v18.tex  README.md  contents.md  generate_ipynb.py  junction_montecarlo.ipynb  montecarlo_yukawa.py
(+213 files in other folders)
